# ZapMeNotQt

./: .gitignore  AnnulusDialog.py  BoxDialog.py  BoxShieldDialog.py  CappedCylinderDialog.py  DetectorLocationDialog.py  GenericBodyDialog.py  MainWindow1.py  OptionsGroupsDialog.py  PushMeDialog.py  README.md  SphereDialog.py  SphereShieldDialog.py  XSlabShieldDialog.py  YAlignedAnnulusDialog.py  ZAlignedAnnulusDialog.py  ZAlignedCylinderDialog.py  ZapMeNotQt.py  ZapMeNotQt.spec  libraries.py  pyproject.toml  pytest.ini
pyinstaller-hooks/: hook-zapmenot.py
src/: ZapMeNotQt.py
src/ZapMeNotQt/: ActivitiesDialog.py  AnnulusDialog.py  BoxDialog.py  BoxSourceDialog.py  CappedCylinderDialog.py  DescriptionDialog.py  DetectorLocationDialog.py  GenericBodyDialog.py  GraphicsDisplayDialog.py  IsotopePickerDialog.py  LineSourceDialog.py  MainWindow1.py  OptionsBuildupDialog.py  OptionsFillerDialog.py  OptionsGroupsDialog.py  OptionsProgenyDialog.py  OptionsQuadratureDialog.py  OutputDisplayDialog.py  PhotonDialog.py  PointSourceDialog.py  RemoveShieldDialog.py  ScriptDisplayDialog.py  ShellDialog.py  SphereDialog.py  SphereSourceDialog.py  XAlignedAnnulusDialog.py  XAlignedCylinderDialog.py  XAlignedCylinderSourceDialog.py  XSlabDialog.py  YAlignedAnnulusDialog.py  YAlignedCylinderDialog.py  YAlignedCylinderSourceDialog.py  ZAlignedAnnulusDialog.py  ZAlignedCylinderDialog.py  ZAlignedCylinderSourceDialog.py  ZapMeNotQt.py  __init__.py  dataStructures.py  libraries.py
src/ZapMeNotQt/ui/: ActivitiesDialog.py  ActivitiesDialog.ui  DescriptionDialog.py  DescriptionDialog.ui  DetectorLocationDialog.py  DetectorLocationDialog.ui  GenericShieldDialog.py  GenericShieldDialog.ui  GraphicsDialog.py  GraphicsDialog.ui  IsotopeSelector.py  IsotopeSelector.ui  MainWindow.py  MainWindow.ui  OptionsBuildupDialog.py  OptionsBuildupDialog.ui  OptionsFillerDialog.py  OptionsFillerDialog.ui  OptionsGroupsDialog.py  OptionsGroupsDialog.ui  OptionsProgenyDialog.py  OptionsProgenyDialog.ui  OptionsQuadratureDialog.py  OptionsQuadratureDialog.ui  OutputDisplayDialog.py  OutputDisplayDialog.ui  (+9 more)
tests/: test.py  test_options_groups_dialog.py
ui/: GenericShieldDialog.ui  MainWindow.ui  OptionsGroupsDialog.ui  README.md  shieldDialog.ui  sphereInputDialog.ui
