[project]
name = "zapmenotqt"
version = "0.1.0"
description = "A graphical user interface for ZapMeNot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.2",
    "pandas-stubs>=3.0.0.260204",
    "pyqt6>=6.10.2",
    "pyqt6-stubs>=20250824",
    "pytest-qt>=4.5.0",
    "pyvistaqt>=0.11.4",
    "zapmenot",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "ruff>=0.15.11",
]

[tool.uv.sources]
zapmenot = { path = "../../../Desktop/github/ZapMeNot", editable = true }

[tool.ruff.lint]
extend-select = ["B"]

