[project]
name = "zapmenotqt"
version = "0.1.0"
description = "A graphical user interface for ZapMeNot"
readme = "README.md"
authors = [
    { name = "Alan Ford" }
]
requires-python = ">=3.11.14"
dependencies = [
    "pandas>=2.3",
    "pandas-stubs>=2.3.0.250703",
    "pyqt6>=6.10.2",
    "pyqt6-stubs>=20250824",
    "pytest-qt>=4.5.0",
    "pyvistaqt>=0.11.4",
    "zapmenot",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "ruff>=0.15.11",
]

[project.scripts]
my-package = "my_package:main"

[tool.uv.sources]
zapmenot = { path = "../../../Desktop/github/ZapMeNot/", editable = true }

[tool.ruff.lint]
extend-select = ["B"]

# Source - https://stackoverflow.com/a/50610630
# Posted by hoefling, modified by community. See post 'Timeline' for change history
# Retrieved 2026-05-15, License - CC BY-SA 4.0

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"



